test-cases/final-dump.save/type_change.wybe
# Test case for issue #40

?x = 1
?x = 1.0
